--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: "hello-action"
+      - name: "Hello Action"
         uses: ./.github/actions/hello-world
         with:
           first-greeting: "Learning Lab User"
