--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,14 +1,10 @@
-name: "JS Actions"
+name: JS Actions
 
 on: [push]
 
 jobs:
   action:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
-
-      - name: "hello-action"
-        uses: "./.github/actions/hello-world/main.js"
-        with:
-          first-greeting: "Learning Lab User"
